--- a/src/components/offers/offers.css
+++ b/src/components/offers/offers.css
@@ -7,7 +7,7 @@
   margin-top: 40px;
 }
 .img {
-  height: 200px;
+  min-height: 200px;
   max-width: 98vw;
   object-fit: cover;
   transition: filter 0.3s;
