--- a/src/components/offers/offers.css
+++ b/src/components/offers/offers.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: fit-content;
   gap: 30px;
   margin-top: 40px;
 }
